--- a/spatial_unit/enclosed_tessellation.ipynb
+++ b/spatial_unit/enclosed_tessellation.ipynb
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
     }
    ],
    "source": [
-    "openmap_tess.to_parquet('../../urbangrammar_samba/OS_MasterMap_Buildings_sample/edinburgh_mm_tess.pq')"
+    "mastermap_tess.to_parquet('../../urbangrammar_samba/OS_MasterMap_Buildings_sample/edinburgh_mm_tess.pq')"
    ]
   },
   {
