--- a/spatial_unit/chunk_uk.ipynb
+++ b/spatial_unit/chunk_uk.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "source": [
+    "# Geo-chunking Great Britain\n",
+    "\n",
+    "To efficiently analyse whole Great Britain, we need to subdivide it into reasonable chunks. Fro that we will use local authority polygons combined together into contiguous groups of ~ 100k buildings. \n",
+    "\n",
+    "Let's start with retrieval of our building layer from the database."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -8,6 +19,7 @@
    "source": [
     "import os\n",
     "\n",
+    "import numpy as np\n",
     "import geopandas as gpd\n",
     "\n",
     "from sqlalchemy import create_engine\n",
@@ -52,6 +64,13 @@
    ]
   },
   {
+   "source": [
+    "Local authority districts are available as `geojson` from ArcGIS open data portal:"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -59,6 +78,13 @@
    "source": [
     "auth = gpd.read_file('https://opendata.arcgis.com/datasets/7f83b82ef6ce46d3a5635d371e8a3e7c_0.geojson')"
    ]
+  },
+  {
+   "source": [
+    "We want to make sure that both layers use the same CRS."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -70,6 +96,13 @@
    ]
   },
   {
+   "source": [
+    "To speedup spatial query counting the number of buildings within each disttrict, we use only centroids."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -79,33 +112,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "inp, res = df.sindex.query_bulk(auth.geometry, predicate='intersects')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "u, c = np.unique(inp, return_counts=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "auth.loc[u, 'counts'] = c"
-   ]
+    "The calculation of builidngs per polygon is a simple query using spatial index and getting counts per each unique index."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -136,6 +147,11 @@
     }
    ],
    "source": [
+    "inp, res = df.sindex.query_bulk(auth.geometry, predicate='intersects')\n",
+    "\n",
+    "u, c = np.unique(inp, return_counts=True)\n",
+    "\n",
+    "auth.loc[u, 'counts'] = c\n",
     "auth.plot('counts', figsize=(18, 18), legend=True)"
    ]
   },
@@ -740,7 +756,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.7.8-final"
   }
  },
  "nbformat": 4,
