--- a/spatial_unit/chunk_uk.ipynb
+++ b/spatial_unit/chunk_uk.ipynb
@@ -4,9 +4,9 @@
    "source": [
     "# Geo-chunking Great Britain\n",
     "\n",
-    "To efficiently analyse whole Great Britain, we need to subdivide it into reasonable chunks. Fro that we will use local authority polygons combined together into contiguous groups of ~ 100k buildings. \n",
+    "To efficiently analyse whole Great Britain, we need to subdivide it into reasonable chunks. For that, we will use local authority polygons combined into contiguous groups of ~ 100k buildings. \n",
     "\n",
-    "Let's start with retrieval of our building layer from the database."
+    "Let's start with the retrieval of our building layer from the database."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -97,7 +97,7 @@
   },
   {
    "source": [
-    "To speedup spatial query counting the number of buildings within each disttrict, we use only centroids."
+    "To speedup spatial query counting the number of buildings within each disttrict, we use only centroids instead of building polygons."
    ],
    "cell_type": "markdown",
    "metadata": {}
