enclosures, tessellation POC

--- a/spatial_unit/Generate_enclosures.ipynb
+++ b/spatial_unit/Generate_enclosures.ipynb
@@ -6,6 +6,15 @@
    "source": [
     "# Generate enclosures for the Great Britain\n",
     "\n",
+    "This notebook generates _enclosures_ for the area of Great Britain based on set barriers. Note that the final version is different from the [proof of a concept](Parallelized_enclosures). It does not use dask since we found that parallelisation is not necessary and it uses different preprocessing steps for railway.\n",
+    "\n",
+    "Used barriers:\n",
+    "\n",
+    "- road network (OS OpenRoads)\n",
+    "- railway network (OS OpenMap Local)\n",
+    "- rivers (OS OpenRivers)\n",
+    "- coastline (OS Strategi®)\n",
+    "\n",
     "Connect to db:"
    ]
   },
@@ -103,7 +112,9 @@
    "source": [
     "## Generate enclosures\n",
     "\n",
-    "### First level"
+    "### First level\n",
+    "\n",
+    "The first level enclosures are composed of road network and external boundary, which in our case is a coastline."
    ]
   },
   {
@@ -121,6 +132,17 @@
     "from snap import line_to_line, close_gaps\n",
     "from consolidate import topology"
    ]
+  },
+  {
+   "source": [
+    "There three simple steps:\n",
+    "\n",
+    "1. merge layers to a single GeoSeries.\n",
+    "2. union geometries to a single MultiLineString. That helps with precision of `polygonize`.\n",
+    "3. polygonize data and save them as GeometryArray."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -184,7 +206,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Additional barriers"
+    "### Additional barriers\n",
+    "\n",
+    "Additional barriers are used to further subdivide those generated above."
    ]
   },
   {
@@ -231,7 +255,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Preprocess railways"
+    "#### Preprocess railways\n",
+    "\n",
+    "Railways are not optimal input. OS OpenMap Local is cartographic resource and LineStrings representing railways are split into multiple pieces, sometimes even with gaps in between. Moreover, there is almost always a gap where railways cross roads. All that needs to be fixed, otherwise we won't get enclosed geometry.\n",
+    "\n",
+    "The first step is to clean topology - remove nodes of a degree 2."
    ]
   },
   {
@@ -252,6 +280,13 @@
     "%%time\n",
     "railway_topo = topology(railway)"
    ]
+  },
+  {
+   "source": [
+    "Second step closes gaps between LineStrings and then fixes resulting topology again."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -292,6 +327,13 @@
    ]
   },
   {
+   "source": [
+    "Finally, we extend lines to adjacent road geometry to close the area."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -314,7 +356,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Subdivide enclosures"
+    "#### Subdivide enclosures\n",
+    "\n",
+    "With the preprocessed data, we can subdivide first level enclosures into final ones.\n",
+    "\n",
+    "Due to the current transition between pygeos and shapely 2.0, we are using here private `_pygeos_to_shapely` function from GeoPandas. That will not be needed in future.\n",
+    "\n"
    ]
   },
   {
@@ -329,9 +376,15 @@
     "import dask.bag as db\n",
     "\n",
     "from tqdm.notebook import tqdm\n",
-    "from dask.distributed import Client\n",
     "from geopandas._vectorized import _pygeos_to_shapely"
    ]
+  },
+  {
+   "source": [
+    "We need a single GeoSeries of additional barriers."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -353,6 +406,13 @@
    ]
   },
   {
+   "source": [
+    "Using spatial index, we link additional barriers to existing enclosures."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -371,6 +431,13 @@
     "sindex = gpd.GeoSeries(enclosures).sindex\n",
     "inp, res = sindex.query_bulk(additional.geometry, predicate='intersects')"
    ]
+  },
+  {
+   "source": [
+    "Unique enclosure indices in `res` mark those enclosures which needs to be subdivided."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -395,9 +462,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Loop option\n",
-    "\n",
-    "To figure out how long time would it take and if it is worth trying to fix dask."
+    "We loop over polygons and generate new geometry using additional barriers."
    ]
   },
   {
@@ -434,15 +499,22 @@
     "new = []\n",
     "\n",
     "for i in tqdm(unique, total=len(unique)):\n",
-    "    poly = enclosures.data[i]\n",
-    "    crossing = inp[res==i]\n",
-    "    buf = pygeos.buffer(poly, 0.01)\n",
-    "    crossing_ins = pygeos.intersection(buf, additional.values.data[crossing])\n",
-    "    union = pygeos.union_all(np.append(crossing_ins, pygeos.boundary(poly)))\n",
-    "    polygons = np.array(list(polygonize(_pygeos_to_shapely(union))))\n",
-    "    within = pygeos.covered_by(pygeos.from_shapely(polygons), buf)\n",
+    "    poly = enclosures.data[i]  # get enclosure polygon\n",
+    "    crossing = inp[res==i]  # get relevant additional barriers\n",
+    "    buf = pygeos.buffer(poly, 0.01)  # to avoid floating point errors\n",
+    "    crossing_ins = pygeos.intersection(buf, additional.values.data[crossing])  # keeping only parts of additional barriers within polygon\n",
+    "    union = pygeos.union_all(np.append(crossing_ins, pygeos.boundary(poly)))  # union\n",
+    "    polygons = np.array(list(polygonize(_pygeos_to_shapely(union))))  # polygonize\n",
+    "    within = pygeos.covered_by(pygeos.from_shapely(polygons), buf)  # keep only those within original polygon\n",
     "    new += list(polygons[within])"
    ]
+  },
+  {
+   "source": [
+    "Now we replace those polygons which needed subdivision with a new geometry."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -462,6 +534,13 @@
     "%%time\n",
     "final_enclosures = gpd.GeoSeries(enclosures).drop(unique).append(gpd.GeoSeries(new))"
    ]
+  },
+  {
+   "source": [
+    "Before we save it to a file, let's check the difference between initial and final enclosures."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -559,7 +638,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.7.8-final"
   }
  },
  "nbformat": 4,
