--- a/spatial_unit/enclosed_tessellation.ipynb
+++ b/spatial_unit/enclosed_tessellation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Enclosed tessellation experiment\n",
+    "# Enclosed tessellation (proof of a concept)\n",
     "\n",
     "This notebooks is a proof of a concept of enclosed tessellation, i.e. two-step partitioning of space based on building footprints and boundaries (e.g. street network, railway). \n",
     "\n",
@@ -36,7 +36,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Enclosed tessellation toy example"
+    "## Enclosed tessellation toy example\n",
+    "\n",
+    "For the POC, we'll use road network as barriers and building footprints. Both now stored in PostGIS db."
    ]
   },
   {
@@ -63,6 +65,13 @@
     "\n",
     "buildings = gpd.read_postgis(sql, engine, geom_col='geometry')"
    ]
+  },
+  {
+   "source": [
+    "Enclosed tessellation is a `dask`-based parallelised algorithm, so let's start a client first."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -116,6 +125,13 @@
    ]
   },
   {
+   "source": [
+    "`enclosed_tessellation` is loaded from `tessellation.py` in the same directory. "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -127,6 +143,13 @@
     "\n",
     "warnings.filterwarnings('always')"
    ]
+  },
+  {
+   "source": [
+    "To specify an external limit of tesellation, we use the same limit we used for querying the data above."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -306,7 +329,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### MasterMap"
+    "### MasterMap\n",
+    "\n",
+    "Sometimes it is better to restart dask client to start with clean state."
    ]
   },
   {
