--- a/spatial_unit/unit.ipynb
+++ b/spatial_unit/unit.ipynb
@@ -25,7 +25,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exploration of tessellation"
+    "# Exploration of tessellation\n",
+    "\n",
+    "In search of an optimal spatial unit, this notebook explores several options of tessellation."
    ]
   },
   {
