--- a/spatial_unit/chunk_uk.ipynb
+++ b/spatial_unit/chunk_uk.ipynb
@@ -1,15 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Geo-chunking Great Britain\n",
     "\n",
     "To efficiently analyse whole Great Britain, we need to subdivide it into reasonable chunks. For that, we will use local authority polygons combined into contiguous groups of ~ 100k buildings. \n",
     "\n",
     "Let's start with the retrieval of our building layer from the database."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -42,20 +42,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(14309868, 3)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sql = f'SELECT * FROM openmap_buildings_200814'\n",
     "\n",
@@ -64,11 +53,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Local authority districts are available as `geojson` from ArcGIS open data portal:"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -80,11 +69,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "We want to make sure that both layers use the same CRS."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -96,27 +85,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "To speedup spatial query counting the number of buildings within each disttrict, we use only centroids instead of building polygons."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.geometry = df.centroid"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "The calculation of builidngs per polygon is a simple query using spatial index and getting counts per each unique index."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -147,7 +127,7 @@
     }
    ],
    "source": [
-    "inp, res = df.sindex.query_bulk(auth.geometry, predicate='intersects')\n",
+    "inp, res = df.centroid.sindex.query_bulk(auth.geometry, predicate='intersects')\n",
     "\n",
     "u, c = np.unique(inp, return_counts=True)\n",
     "\n",
@@ -217,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,6 +718,168 @@
    "source": [
     "auth.assign(lbls=model.labels_)[[\"lad20cd\", \"lbls\"]].to_csv(\"chunking_labels.csv\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Chunking data to parquet files\n",
+    "\n",
+    "Now we use generated chunks to split building and enclosure data into chunked parquet files."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chunks = pandas.read_csv('../../urbangrammar_samba/spatial_signatures/local_auth_chunking_labels.csv', index_col=0)\n",
+    "auth = gpd.read_parquet('../../urbangrammar_samba/spatial_signatures/local_authorities.pq')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The first step is to dissolve each chunk to a single geometry."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "districts = auth.merge(chunks, on='lad20cd', how='inner')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chunks = districts.dissolve('lbls')\n",
+    "chunks['chunkID'] = range(len(chunks))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['uID'] = range(len(df))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Above, we have also assigned unique IDs to both chunks and to buildings, below we do the same for enclosuers. This allows easy attribute-based merging of data in the future instead of costly spatial joins."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "enclosures = gpd.read_parquet('../../urbangrammar_samba/spatial_signatures/enclosures.pq')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "enclosures['enclosureID'] = range(len(enclosures))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We first use spatial index to chunk enclosures as our top-level geometry and chunk buildings based on enclosures. That ensures that both layr align on the edges of district chunks. The resulting chunked GeoDataFrames are then saved to parquet files."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inp, res = enclosures.centroid.sindex.query_bulk(chunks.geometry, predicate='intersects')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "blg_six = df.centroid.sindex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "590753d3303f49309b3c3f00f7313e1c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=103.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.7/site-packages/ipykernel_launcher.py:5: UserWarning: this is an initial implementation of Parquet/Feather file support and associated metadata.  This is tracking version 0.1.0 of the metadata specification at https://github.com/geopandas/geo-arrow-spec\n",
+      "\n",
+      "This metadata specification does not yet make stability promises.  We do not yet recommend using this in a production setting unless you are able to rewrite your Parquet/Feather files.\n",
+      "\n",
+      "To further ignore this warning, you can do: \n",
+      "import warnings; warnings.filterwarnings('ignore', message='.*initial implementation of Parquet.*')\n",
+      "  \"\"\"\n",
+      "/opt/conda/lib/python3.7/site-packages/ipykernel_launcher.py:8: UserWarning: this is an initial implementation of Parquet/Feather file support and associated metadata.  This is tracking version 0.1.0 of the metadata specification at https://github.com/geopandas/geo-arrow-spec\n",
+      "\n",
+      "This metadata specification does not yet make stability promises.  We do not yet recommend using this in a production setting unless you are able to rewrite your Parquet/Feather files.\n",
+      "\n",
+      "To further ignore this warning, you can do: \n",
+      "import warnings; warnings.filterwarnings('ignore', message='.*initial implementation of Parquet.*')\n",
+      "  \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tqdm.notebook import tqdm\n",
+    "\n",
+    "for chunk_id in tqdm(range(len(chunks)), total=len(chunks)):\n",
+    "    wihtin_chunk = enclosures.iloc[res[inp == chunk_id]]\n",
+    "    wihtin_chunk.to_parquet(f'../../urbangrammar_samba/spatial_signatures/enclosures/encl_{chunk_id}.pq')\n",
+    "    \n",
+    "    i, r = blg_six.query_bulk(wihtin_chunk.geometry, predicate='intersects')\n",
+    "    df.iloc[np.unique(r)][['uID', 'geometry']].to_parquet(f'../../urbangrammar_samba/spatial_signatures/buildings/blg_{chunk_id}.pq')"
+   ]
   }
  ],
  "metadata": {
@@ -756,7 +898,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8-final"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
