--- a/spatial_unit/chunked_enclosed_tessellation.ipynb
+++ b/spatial_unit/chunked_enclosed_tessellation.ipynb
@@ -77,6 +77,7 @@
    "source": [
     "import time\n",
     "\n",
+    "import numpy as np\n",
     "import geopandas as gpd\n",
     "from tqdm.notebook import tqdm\n",
     "\n",
@@ -224,6 +225,7 @@
     "    blg = gpd.read_parquet(f'../../urbangrammar_samba/spatial_signatures/buildings/blg_{chunk_id}.pq')\n",
     "    enclosures = gpd.read_parquet(f'../../urbangrammar_samba/spatial_signatures/enclosures/encl_{chunk_id}.pq')\n",
     "    tess = enclosed_tessellation(buildings=blg, enclosures=enclosures.geometry.values, unique_id=\"uID\", enclosure_id=\"enclosureID\")\n",
+    "    tess['enclosureID'] = np.take(enclosures.enclosureID, tess.enclosureID).values\n",
     "    tess.to_parquet(f'../../urbangrammar_samba/spatial_signatures/tessellation/tess_{chunk_id}.pq')\n",
     "    client.restart()\n",
     "    time.sleep(5)"
