--- a/spatial_unit/street_profile.ipynb
+++ b/spatial_unit/street_profile.ipynb
@@ -30,31 +30,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "streets = geopandas.read_file(momepy.datasets.get_path('bubenec'), layer='streets')\n",
-    "buildings = geopandas.read_file(momepy.datasets.get_path('bubenec'), layer='buildings')"
+    "buildings = geopandas.read_parquet(\"../../urbangrammar_samba/spatial_signatures/buildings/blg_0.pq\")\n",
+    "chunks = geopandas.read_parquet('../../urbangrammar_samba/spatial_signatures/local_auth_chunks.pq')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 3.84 s, sys: 8.72 ms, total: 3.85 s\n",
-      "Wall time: 3.84 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%time mmsp = momepy.StreetProfile(streets, buildings, distance=3, verbose=False)"
+    "import os\n",
+    "\n",
+    "from sqlalchemy import create_engine\n",
+    "\n",
+    "user = os.environ.get('DB_USER')\n",
+    "pwd = os.environ.get('DB_PWD')\n",
+    "host = os.environ.get('DB_HOST')\n",
+    "port = os.environ.get('DB_PORT')\n",
+    "\n",
+    "db_connection_url = f\"postgres+psycopg2://{user}:{pwd}@{host}:{port}/built_env\"\n",
+    "engine = create_engine(db_connection_url)\n",
+    "\n",
+    "chunk0 = chunks.geometry.iloc[0]\n",
+    "\n",
+    "sql = f\"SELECT * FROM openroads_200803_topological WHERE ST_Intersects(geometry, ST_GeomFromText('{chunk0.wkt}',27700))\"\n",
+    "\n",
+    "streets = geopandas.read_postgis(sql, engine, geom_col='geometry')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,29 +183,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 119 ms, sys: 4.26 ms, total: 123 ms\n",
-      "Wall time: 121 ms\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "/opt/conda/lib/python3.7/site-packages/numpy/lib/nanfunctions.py:1665: RuntimeWarning: Degrees of freedom <= 0 for slice.\n",
-      "  keepdims=keepdims)\n"
+      "  keepdims=keepdims)\n",
+      "/opt/conda/lib/python3.7/site-packages/ipykernel_launcher.py:70: RuntimeWarning: invalid value encountered in long_scalars\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 3min 11s, sys: 17.2 s, total: 3min 28s\n",
+      "Wall time: 3min 28s\n"
      ]
     }
    ],
    "source": [
     "%time sp = street_profile(streets, buildings)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
