--- a/morphometrics/single-core.ipynb
+++ b/morphometrics/single-core.ipynb
@@ -159,6 +159,10 @@
     "\n",
     "\n",
     "    df['ltbIBD'] = [mean_interbuilding_distance(x) for x in range(len(df))]\n",
+    "    \n",
+    "    # Reached neighbors and area on 3 topological steps on tessellation\n",
+    "    df['ltcRea'] = [w3.cardinalities[i] for i in range(len(df))]\n",
+    "    df['ltcAre'] = [df.sdcAre.iloc[w3.neighbors[i]].sum() for i in range(len(df))]\n",
     "\n",
     "    df[df['keep']].drop(columns=['keep']).to_parquet(f\"../../urbangrammar_samba/spatial_signatures/morphometrics/cells/cells_{chunk_id}.pq\")\n",
     "\n",
