--- a/measuring/morphometrics.ipynb
+++ b/measuring/morphometrics.ipynb
@@ -189,7 +189,7 @@
     "    ddf['sicCAR'] = ddf['sdbAre'] / ddf['sdcAre']\n",
     "    \n",
     "    # Building-cell alignment\n",
-    "    ddf['stbCeA'] = (ddf['stbOri'] / ddf['stcOri']).abs()\n",
+    "    ddf['stbCeA'] = (ddf['stbOri'] - ddf['stcOri']).abs()\n",
     "    \n",
     "    # Compute all characters using dask\n",
     "    df = ddf.compute()\n",
@@ -495,7 +495,7 @@
     "    adj_list[\"distance\"] = (\n",
     "        df.buildings.iloc[adj_list.focal]\n",
     "        .reset_index(drop=True)\n",
-    "        .distance(df.buildings.iloc[adj_list.neighbor].reset_index(drop=True))\n",
+    "        .distance(df.buildings.iloc[adj_list.neighbor].reset_index(drop=True)).values\n",
     "    )\n",
     "    adj_list = adj_list.set_index(['focal', 'neighbor'])\n",
     "\n",
