momepy notes, cleanup

--- a/measuring/morphometrics.ipynb
+++ b/measuring/morphometrics.ipynb
@@ -12,7 +12,12 @@
     "\n",
     "All steps within this notebook are parallelised using `dask`. The first part, which measures aspects of individual elements (does not require to know the context) uses pre-release of `dask-geopandas`. The rest uses `dask` to manage parallel iteration over geo-chunks with single-core algorithms. \n",
     "\n",
-    "Some functions are imported from a `momepy_utils.py` file stored wihtin this directory. Those are either helper functions taken directly from momepy or their enhanced versions, all which will be included in the next release of momepy.\n",
+    "Some functions are imported from a `momepy_utils.py` file stored wihtin this directory. Those are either helper functions taken directly from momepy or their enhanced versions, all which will be included in the next release of momepy:\n",
+    "\n",
+    "- `get_edge_ratios` is implemented in momepy 0.4.0 as `get_network_ratio`\n",
+    "- `get_nodes` is included in `get_node_id`\n",
+    "- remaining functions have been used to refactor existing momepy classes.\n",
+    "\n",
     "\n",
     "## Individual elements\n",
     "\n",
