--- a/spatial_unit/Generate_enclosures.ipynb
+++ b/spatial_unit/Generate_enclosures.ipynb
@@ -8,6 +8,8 @@
     "\n",
     "This notebook generates _enclosures_ for the area of Great Britain based on set barriers. Note that the final version is different from the [proof of a concept](Parallelized_enclosures). It does not use dask since we found that parallelisation is not necessary and it uses different preprocessing steps for railway.\n",
     "\n",
+    "Note: An algorithm to generate enclosures has been implemented in momepy 0.4.0 as [`momepy.enclosures`](http://docs.momepy.org/en/latest/generated/momepy.enclosures.html#momepy.enclosures).\n",
+    "\n",
     "Used barriers:\n",
     "\n",
     "- road network (OS OpenRoads)\n",
@@ -258,6 +260,8 @@
     "#### Preprocess railways\n",
     "\n",
     "Railways are not optimal input. OS OpenMap Local is cartographic resource and LineStrings representing railways are split into multiple pieces, sometimes even with gaps in between. Moreover, there is almost always a gap where railways cross roads. All that needs to be fixed, otherwise we won't get enclosed geometry.\n",
+    "\n",
+    "Preprocessing fucntions `topology`, `close_gaps` and `line_to_line` have been implemented in momepy 0.4.0 as [`momepy.remove_false_nodes`](http://docs.momepy.org/en/latest/generated/momepy.remove_false_nodes.html#momepy.remove_false_nodes), [`momepy.close_gaps`](http://docs.momepy.org/en/latest/generated/momepy.close_gaps.html#momepy.close_gaps) and [`momepy.extend_lines`](http://docs.momepy.org/en/latest/generated/momepy.extend_lines.html#momepy.extend_lines).\n",
     "\n",
     "The first step is to clean topology - remove nodes of a degree 2."
    ]
