--- a/spatial_unit/chunked_enclosed_tessellation.ipynb
+++ b/spatial_unit/chunked_enclosed_tessellation.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Generate enclosed tessellation\n",
     "\n",
-    "This notebook generates enclosed tessellation for the whole Great Britain within [enclosures](Generate_enclosures)."
+    "This notebook generates enclosed tessellation for the whole Great Britain within [enclosures](Generate_enclosures).\n",
+    "\n",
+    "Note: An algorithm to generate enclosed tessellation has been implemented in momepy 0.4.0 within [`momepy.Tessellation`](http://docs.momepy.org/en/latest/generated/momepy.Tessellation.html#momepy.Tessellation)."
    ]
   },
   {
