--- a/spatial_unit/enclosed_tessellation.ipynb
+++ b/spatial_unit/enclosed_tessellation.ipynb
@@ -8,6 +8,8 @@
     "\n",
     "This notebooks is a proof of a concept of enclosed tessellation, i.e. two-step partitioning of space based on building footprints and boundaries (e.g. street network, railway). \n",
     "\n",
+    "Note: An algorithm to generate enclosed tessellation has been implemented in momepy 0.4.0 within [`momepy.Tessellation`](http://docs.momepy.org/en/latest/generated/momepy.Tessellation.html#momepy.Tessellation).\n",
+    "\n",
     "## Load data\n"
    ]
   },
